--- a/markdown/cults/3.0_Magic.md
+++ b/markdown/cults/3.0_Magic.md
@@ -1,38 +1,55 @@
-# Magic
+# Assumnptions and References
 
-Magic permeates Glorantha. It exists in a spectrum between well-understood human magic, as covered by the RQ:G rules, up to natural phenonema such as the tides or sunset. This includes everything in between. Understanding how  Gloranthan magic works, what it can and can't do, and how it can be used in play is one of the key challenges a Runequest GM faces. This is especially true when covering magic outside the specific scope of the game mechanics, but still at least partially within human understanding and control. The game rules contain many references to such magic, using the term *heroquesting*. Such magic is stated at various places in the rules as get you a bonus to your harvest roll, or a way to get an exotic mount such as a hippogrif. Gloranthan lore contains references to heroquests that can resurrect the long dead, introduce new magic, transform the understanding of a cult, and even change Glorantha at a cosmic level by raising a new planet or moon.
+## Magic
+
+Magic permeates Glorantha. It exists in a spectrum between well-understood human magic, as covered by the RQ:G rules, up to natural phenonema such as the tides or sunset. This includes everything in between. Understanding how  Gloranthan magic works, what it can and can't do, and how it can be used in play is one of the key challenges a Runequest GM faces. This is especially true when covering magic outside the specific scope of the game mechanics, but still at least partially within human understanding and control. The game rules contain many references to such magic, using the term *heroquesting*. Such magic is stated at various places in the rules as gaining you a bonus to your harvest roll, as a way to get an exotic mount such as a hippogriff. Gloranthan lore contains references to heroquests that can resurrect the long dead, introduce new magic, transform the understanding of a cult, and even change Glorantha at a cosmic level by raising a new planet or moon.
 
 The RQ2 rules, published 1978, said:
 
->> The universe is divided into two phases, the spirit plane and the pysical plane. [Magical Energy] is to the physical plane what matter is to the physical world. POW is the capacity to collact [that energy].
+>> The universe is divided into two phases, the spirit plane and the physical plane. [Magical Energy] is to the physical plane what matter is to the physical world. POW is the capacity to collact [that energy].
 
 
-Herophonmes Statement of Magic, presented in the RQ:G Red Book of Magic, is a in-world document presented as a synthesis of the humanist and theistic world views.  It defines magios as:
+Herophonmes Statement of Magic, presented in the RQ:G Red Book of Magic, is a in-world document presented as a synthesis of the humanist and theistic world views.  It defines magic as:
 
 
 >> the interaction of the Mortal and Gods Worlds, and/or of conscious beings against destiny. Although the two polarities are mutually exclusive, there exists a common 
 >> ground between them which is the place of energy exchanges. This exchange from mortal to divine or from divine to mortal is known as magic.
 
-Sorcerors, theists and animists have somewhat different concepts of the divine; abstract runes that can be studied, personified gods that can be emulated, or spirits that can be bargained with or dominated. But they share the idea that magic is what happens when mortals visit and interact with the Other Side, .
+Sorcerors, theists and animists have somewhat different concepts of the divine; abstract runes that can be studied, personified gods that can be appeased and emulated, or spirits that can be bargained with and dominated. But they share the idea that magic is what happens when mortals visit and interact with the Other Side.
 
 This post describes how to use that spectrum of magic in play, from a regular weekly worship ceremony to the activites of a world-changing hero like Argrath. 
 
-- *Worship* is the sacrifice of personal magical energy to the Other Side. It is covered in the main RQ:G rulebook, p315.
+- *Spells* are the expenditure of magical energy to achieve a known effect on the world. They are covered in the RQ:G rulebook from p243..
 
-- *Spells* are the expenditure of magical energy to achieve a known effect on the world.
+- *Divine Intervention* is the unstructured expenditure of magical energy to achieve an unpredictable effect. It is covered in the RQ:G rulebook, p272.
 
-- *Divine Intervention* is the uncontrolled expenditure of magical enrgy to achiuve an unpredicatable effect.
+- *Worship* is the sacrifice of personal magical energy to the Other Side. It is covered in the RQ:G rulebook, p315.
 
 - *Rituals* are spells that take substantial time to cast. They are covered in RBoM p7 and RQ:G p245.
 
-- *Ordeals* are magical rituals that test a candidate to see if they pass. In the form of initiation tests, they are mentioned in RQ:G p274.
+- *Ordeals* are magical rituals that test a candidate to see if they pass. In the form of initiation tests, they are mentioned in RQ:G p274. The ordeal required to become a shaman is covered in RQ:G p354.
 
-- *Contests* are magical rituals in which several candidates compete to determine a winner. There are no published generic rules for such magical contests, but several published scenarios that can be taken as examples, including the Garhound Contest in Sun County.
+- *Contests* are magical rituals in which several candidates compete to determine a winner. 
 
-- *Expeditions* are large-scale magical rituals in which a substantial portion of the resources of a clan, tribe, nation or even empire are dedicated to achieving some otherwise-impossible goal. There are no published generic rules for such rituals, and no Chaosium-published scanarios that put the players in control of them. However the scenario 
+- *Expeditions* are large-scale magical rituals in which a substantial portion of the resources of a clan, tribe, nation or even empire are dedicated to achieving some otherwise-impossible goal. 
 
+- *Conflicts* are magical rituals in which the resources of one or more groups are deployed to opposing ends. 
 
-# Heroquests
+Any of these can be considered a heroquest; the question of where exactly the boundary is between things that are, and are not, is not especially important.
+
+There are currently no explicit rules for organising or participating in Contests, Expeditions or Conflicts. However:
+
+- Six Seasons in Sartar shows how to run an initiation ordeal in play.
+
+- the Garhound Contest in Sun County, and Pegasus Plateau in the corresponding scenario book, are examples of published adventures based on magical contests.
+
+- Black Spear, in the Jonstown Compendium, is based on an expedition organised by a Sartarite clan. 
+
+- The Chaosium-published solo scenario The Battle of Dangerford, from the starter set, puts the player in the midst of a magical and physical conflict. 
+
+This post provides some guidelines for how to write such scenarios so that they can be run using the regular RQ:G rules. Seperately, in the abscence of official rules, it provides some optional additional rules that may help.
+
+## Heroquesting
 
 A heroquest is defined in RQ:G as 'ritual adventure'. They are described as being able to bring the dead back to life, bring a wyter to a community, grant it additional powers, compel an enemy to attack, acquire a flying mount such as a hippogriff, or provide a bonus to a harvest roll. 
 Heroquest rituals are performed during the Sacred Time ceremonies of main Gloranthan religions.
@@ -41,19 +58,19 @@ RQ:G Mythology lists Harmast's heroquests:
 
 1. his initiation into the cult of Orlanth, in which he visited Orlanth's hall.
 
-2. every High Holy day of Orlanth, with the same events visited several times
+2. every High Holy day of Orlanth, sometimes with the same events visited several times
 
 3. after his death in battle, when he returned to life
 
 4. his Second Initiation, when he became a Rune Priest
 
-5. visits to the Nennorian Tower, Hill of Gold, Lord Aranvark's cabin,
+5. visits to the Nennorian Tower, Hill of Gold and Lord Aranvark's cabin.
 
 6. when attacked by his enemy Palangio the Iron Vrok
 
 7. his lightbringer's Quest on which he returned with Arkat, visiting Hrela Armali, the Gates of the West, Court of Silence, the Underworld and the Dead Gods court
 
-In the terms defined above, these are:
+In the terms defined above, these seem to be:
 
 1 + 4. ordeals
 
@@ -61,97 +78,9 @@ In the terms defined above, these are:
 
 3. Divine intervention
 
-5, 6 + 7 Ritual quests, travelling far across the other World to areas only known in rumour
+5. Ritual quests, travelling far across the Other World to areas only known in rumour
 
 7. an expedition across Glorantha, physically travelling through Luatha to the underworld.
 
-Base on that list, it appears a heroquest that can be done relatively safely by someone with appropriate preparation and training is just a Rune Spell.
+This list emphasises the heroquests are very much something that start within the normal scale of RQ adventures, gradually progressing from individual to world-changign scope. 
 
-Which means for a hero power to not be a Rune Spell, there are two possible reasons:
-
-- it is newly discovered, and the person who did so has not yet founded a cult passing on the ability
-
-- the quest to gain the ability can't be successfully performed by someone without heroic levels of power
-
-# Power Scaling
-
-In previous RQ editions:
-
-- skill advancement was generally capped at 100 + category bonus. 
-
-- Gods and monsters could have skill level of 400 or even 2000%.
-
-So it was apparent some form of 'heroquest rules' were needed to develop heroes who could fight those monsters. 
-
-The diagram below shows the ranges of combat abilities for a variety of creatures and NPCs from current RQ:G publications, including the Bestiary and LoRQ:DP. The highest value I could find was 140%, for Ironhoof the Centaur, a Hero who has his own counter in the Dragon Pass boardgame. There are no available statistics for Jar Eel or Harrek, but presumably they would be in the range 150 to 200%. Few PCs would have a meaningful chance of surviving a duel with either, as even without them using magic or special abilities they would be reducing the chance to defend against their attacks by ~100%. 
-
-As such, in RQ:G there is no need for a version of the rules that scales to higher values, like a 'Super Runequest'. Instead the range of possible opponents is compressed to those the system works for. 
-
-For PCs, the starting skill level can be as low as 20%, and is usually limited to ~90%. However, there is explicitly no cap on skill advancement by experience; see RQ:G p416. Long term regular play might involve as much as 50 sessions per year continuing for several years. 
-Looking at the pregenerated characters, Vasana has a 5% manipulation bonbus, Harmast has 20%. So after several years Harmast might be adding (250/5) * 3.5 = 175 to their starting skill, while Vasana is only adding 40%.
-
-PC rules do not necessarily apply to NPCs, so the comparatively low values of NPC skills don't in themselves mean this rule is problematic. However, this rule does mean that after a few years play, some PCs would be able to defeat any published NPC in a duel without muich risk. While it is possible to adjust NPC statistics correspondingly to avoid that, that is a lot of GM prep work. And if the results of that are published, they will need adjustment to be usable by those who do not play so regularly.
-
-Similarly, perfect balance may not be a requirement, but the vast emergent difference between those with high and low category modifiers will not be to some people's taste.
-
-If either issue is felt to be a problem, one option is to:
-
-- give each PC a Mastery rune rating, which is added to the experience roll in the same way as category modifier
-
-- have advancement only happen if the resulting total is above the skill value, dropping the rule that an adjusted roll of 100 is always a success.
-
-Choosing appropriate Mastery rune ratings for the PCs in your campaign allows control of the speed of advancement, and the limit any single skill can hit. So you could have PCs who becomes peers of Harrek after perhaps two years play, without them being able to trivially defeat him after three.
-
-
-Heroquest
-
-The scaling diagram above also shows the chance of casting magic, where:
-
-- instantaneous Rune spells cast using the PC's corresponding Rune value, with a maximun of 100.
-
-- ritually-cast Rune spells that add a modifier to chance of success at casting fo up to 100%
-
-- ritually-cast sorcery spells that can be based on skill over 100%, and can have additional sympathetic magic bonuses.
-
-
-
-
-
-- Character Growth
-
-- Heroes
-
-
-New Common Rituals
-
-Provide Support
-
-Support
-
-
-The Red Book of Magic has ~500 examples; a heroquest that can be done relatively safely by someoine with appropriate preparation and training is just a Rune Spell.
-
-So a hero power to not be a Rune Spell, I think there are two possible reasons:
-
-- it is newly discovered, and the guy who did so has not yet founded a cult passing on the ability
-
-- the quest to gain the ability can't be successfully performed by someone without superhuman abilities 
-
-In neither case will it be widespread. But I can see there is room for someone who discovers a new power (e..g Death Stare) to find that allows them to complete heroquests (e.g. Become Unaging) that are reasonably well known in the right circles.
-
-provide a mechanical role for :20-condition-mastery:,:20-condition-magic:, :20-form-spirit:,:20-rune-law: and :20-condition-infinity:.
-no other new skills or characteristics.
-few, or no, new abstract nouns (wyter, other side, shaman, etc is enough terminology to be getting on with)
-compatible with current RQ:G character generation rules
-compatible with published RQ:G stats for Ironhoof, the Bat and the Hydra.
-capable of providing a usable stat block for Jar Eel and Harrek
-_broadly_ compatible with existing wider canon, including WB&RM, KoDP and Six Ages.
-mechanically sound
-easy to ignore or handwave if they get in the way of the game.
-
-
-Interim minimum heroquest rules:
-
-A Heroquest is a magical ritual with a percentage chance of success.
-Off-screen, there is a complex system is some unpublished book that determines that chance.
-On screen, you are running a scenario to replace that die roll.
